--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,19 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+        <div class="container">
+            <header>
+                <img src="{{ asset('images/logo-eni.svg') }}" alt="Sortie">
+                {% include 'inc/_nav.html.twig' %}
+            </header>
+            <main>
+
+            </main>
+            <footer>
+
+            </footer>
+        </div>
+
     </body>
 </html>
