--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" href="{{ asset("css/style.css") }}">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
@@ -17,7 +16,7 @@
 
         <div class="container">
             <header>
-                <img src="{{ asset('images/logo-eni.svg') }}" alt="Sortie">
+                <img src="{{ asset('images/logo-eni.j') }}" alt="Sortie">
                 {% include 'inc/_nav.html.twig' %}
             </header>
             <main>
