AJout de l'authentification

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
                 {% include 'inc/_nav.html.twig' %}
             </header>
             <main>
-
+                {% block body %}{% endblock %}
             </main>
             <footer>
 
