--- a/templates/inc/_nav.html.twig
+++ b/templates/inc/_nav.html.twig
@@ -13,9 +13,9 @@
                 <li>
                     <a href="">Mon profil</a>
                 </li>
-                <li>
-                    <a href="">Se deconnecter</a>
-                </li>
+                {% if app.user %}
+                    <a href="{{ path('app_logout') }}">Déconnexion</a>
+                {% endif %}
             </ul>
         </nav>
 {% endblock %}
