--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,13 +15,10 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputPseudo">Pseudo ou adresse mail</label>
-    <input type="text" value="{{ last_username }}" name="pseudo" id="inputPseudo" class="form-control"
-           required
-           autofocus style="width: 400px">
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" style="width: 400px" name="password" id="inputPassword" class="form-control"
-           required>
+    <label for="inputEmail">Email</label>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    <label for="inputPassword">Password</label>
+    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
