--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -5,5 +5,17 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Bienvenu  {{ prenom }}</h1>
+    <h1>Liste des sorties</h1>
+
+    <p>Date du jour : {{ 'now'|date('d/m/Y') }}</p>
+    <p>{{ personne.prenom~' '~personne.nom }}</p>
+
+    {{ form_start(sortiesForm) }}
+
+    {{ form_widget(sortiesForm) }}
+
+    <button>Rechercher</button>
+
+    {{ form_end(sortiesForm) }}
+
 {% endblock %}
