--- a/templates/user/count.html.twig
+++ b/templates/user/count.html.twig
@@ -1,21 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Profil de {{ user.firstname }} {{ user.lastname }}</h2>
-    <div>Campus : {{ user.school.name }}</div>
-    <div id="profile_pic">
-        {% if user.picture %}
-            <img src="{{ asset('uploads/profiles/'~user.picture) }}" alt="{{ user.firstname }} {{ user.lastname }}">
-        {% else %}
-            <img src="{{ asset('img/profile-default.jpg') }}" alt="Photo par défaut">
-        {% endif %}
-    </div>
+    <h2>Profil de {{ user.prenom }} {{ user.nom }}</h2>
+    <div>Campus : {{ user.campus.nom }}</div>
+    {{ form_start(userForm) }}
+    {{ form(userForm) }}
+    {{ form_end(userForm) }}
 
-    {% if app.user == user %}
-        <a href="{{ path('user_edit') }}">Modifier mon profil</a><br>
-        <a href="{{ path('user_upload') }}">Modifier mon image</a><br>
-        <a href="{{ path('user_edit_password') }}">Modifier mon mot de passe</a>
-    {% endif %}
+{#    <div id="profile_pic">#}
+{#        {% if user.picture %}#}
+{#            <img src="{{ asset('uploads/profiles/'~user.picture) }}" alt="{{ user.prenom }} {{ user.nom }}">#}
+{#        {% else %}#}
+{#            <img src="{{ asset('img/profile-default.jpg') }}" alt="Photo par défaut">#}
+{#        {% endif %}#}
+{#    </div>#}
+
+{#    {% if app.user == user %}#}
+{#        <a href="{{ path('user_edit') }}">Modifier mon profil</a><br>#}
+{#        <a href="{{ path('user_upload') }}">Modifier mon image</a><br>#}
+{#        <a href="{{ path('user_edit_password') }}">Modifier mon mot de passe</a>#}
+{#    {% endif %}#}
 {% endblock %}
 
-{% block title %}Profil de {{ user.firstname }} {{ user.lastname }}{% endblock %}
+{% block title %}Profil de {{ user.prenom }} {{ user.nom }}{% endblock %}
