--- a/templates/sortie/creationSortie.html.twig
+++ b/templates/sortie/creationSortie.html.twig
@@ -9,13 +9,11 @@ Ajout d'une sortie
 
 {{ form_start(sortieForm) }}
 
-
-
+    <div class="addPlace"><a href="{{ ajoutLieu }}">Ajout de lieu</a></div>
 {{ form_widget(sortieForm) }}
 
 <button>Ajouter</button>
 
 {{ form_end(sortieForm) }}
-
 
 {% endblock %}
