--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -17,11 +17,35 @@
     <button>Rechercher</button>
 
     {{ form_end(sortiesForm) }}
-<ul>
-    {% for sortie in sortiesOrganisees %}
-        <li>
-            {{ sortie.nom~ ' ' ~sortie.dateHeureDebut~' '~sortie.duree }}
-        </li>
-    {% endfor %}
-</ul>
+
+    <p>Sorties organisées :</p>
+    <ul>
+        {% for sortie in sortiesOrganisees %}
+            <li>
+                {{ 'Nom : '~ sortie.nom~ ',  date de début :' ~sortie.dateHeureDebut|date('d/m/Y')~',  durée de la sortie : '~sortie.duree~ ' minutes' }}
+            </li>
+        {% endfor %}
+    </ul>
+
+    <br>
+
+    <p>Sorties auxquelles je participe : </p>
+    <ul>
+        {% for sortie in sortiesParticipees %}
+            <li>
+                {{ 'Nom : '~ sortie.nom~ ',  date de début :' ~sortie.dateHeureDebut|date('d/m/Y')~',  durée de la sortie : '~sortie.duree~ ' minutes' }}
+            </li>
+        {% endfor %}
+    </ul>
+
+    <br>
+
+    <p>Sorties auxquelles je ne participe pas : </p>
+    <ul>
+        {% for sortie in sortiesNonParticipees %}
+            <li>
+                {{ 'Nom : '~ sortie.nom~ ',  date de début :' ~sortie.dateHeureDebut|date('d/m/Y')~',  durée de la sortie : '~sortie.duree~ ' minutes' }}
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
