--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -48,4 +48,15 @@
             </li>
         {% endfor %}
     </ul>
+
+    <br>
+
+    <p>Sorties passées : </p>
+    <ul>
+        {% for sortie in sortiesPassees %}
+            <li>
+                {{ 'Nom : '~ sortie.nom~ ',  date de début :' ~sortie.dateHeureDebut|date('d/m/Y')~',  durée de la sortie : '~sortie.duree~ ' minutes' }}
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
