--- a/templates/user/account.html.twig
+++ b/templates/user/account.html.twig
@@ -7,19 +7,19 @@
     {{ form_widget(userForm) }}
     {{ form_end(userForm) }}
 
-{#    <div id="profile_pic">#}
-{#        {% if user.picture %}#}
-{#            <img src="{{ asset('uploads/profiles/'~user.picture) }}" alt="{{ user.prenom }} {{ user.nom }}">#}
-{#        {% else %}#}
-{#            <img src="{{ asset('img/profile-default.jpg') }}" alt="Photo par défaut">#}
-{#        {% endif %}#}
-{#    </div>#}
+    <div id="profile_pic">
+        {% if user.photo %}
+            <img src="{{ asset('images/logo-eni.jpg')}}" alt="{{ user.prenom }} {{ user.nom }}">
+        {% else %}
+            <img src="{{ asset('images/logo-eni.jpg/') }}" alt="Photo par défaut">
+        {% endif %}
+    </div>
 
-{#    {% if app.user == user %}#}
-{#        <a href="{{ path('user_edit') }}">Modifier mon profil</a><br>#}
-{#        <a href="{{ path('user_upload') }}">Modifier mon image</a><br>#}
-{#        <a href="{{ path('user_edit_password') }}">Modifier mon mot de passe</a>#}
-{#    {% endif %}#}
+    {% if app.user == user %}
+        <a href="{{ path('app_user_profile') }}">Modifier mon profil</a><br>
+        <a href="{{ path('app_user_profile') }}">Modifier mon image</a><br>
+        <a href="{{ path('app_user_profile') }}">Modifier mon mot de passe</a>
+    {% endif %}
 {% endblock %}
 
 {% block title %}Profil de {{ user.prenom }} {{ user.nom }}{% endblock %}
