--- a/templates/user/upload.html.twig
+++ b/templates/user/upload.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Upload de photo de profil</h2>
+    <h2>Upload de votre avatar</h2>
 
-    {{ form(form) }}
+    {{ form(form)}}
 
-    <a href="{{ path('user_profile', {id: app.user.id}) }}" class="btn btn-danger">Passer cette étape</a>
+    <a href="{{ path('user_account', {id: app.user.id}) }}" class="btn btn-danger">Passer cette étape</a>
 {% endblock %}
 
-{% block title %}Upload de photo de profil{% endblock %}
+{% block title %}Upload de votre avatar{% endblock %}
 
