--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,11 +5,8 @@
         <title>{% block title %}Sortir{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset("css/style.css") }}">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-
-
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            <script src="{{ asset('js/script.js') }}" defer></script>
         {% endblock %}
     </head>
     <body>
