giga requete terminée v2 :)

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -10,7 +10,7 @@
     <p>Date du jour : {{ 'now'|date('d/m/Y') }}</p>
     <p>{{ personne.prenom~' '~personne.nom }}</p>
 
-    {{ form_start(formulaire }}
+    {{ form_start(formulaire) }}
 
     {{ form_widget(formulaire) }}
 
