--- a/templates/inc/_nav.html.twig
+++ b/templates/inc/_nav.html.twig
@@ -1,12 +1,14 @@
 {% block navbar %}
         <nav>
             <ul>
-                <li>
-                    <a href="">Ville</a>
-                </li>
-                <li>
-                    <a href="">Campus</a>
-                </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li>
+                        <a href="">Ville</a>
+                    </li>
+                    <li>
+                        <a href="">Campus</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a href="">Accueil</a>
                 </li>
