--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -59,7 +59,7 @@
                                 <div class="card_infos_back">
                                     <div class="buttons">
                                         <a href="">+ d'infos</a>
-                                        <a href="">S'inscrire</a>
+                                        <a href="{{ path('addParticipant', {"id":sortie.id}) }}">S'inscrire</a>
                                     </div>
                                 </div>
                             </div>
