--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -61,7 +61,7 @@
                             <div class="sortieCardBack">
                                 <div class="card_infos_back">
                                     <div class="buttons">
-                                        <a href="">+ d'infos</a>
+                                        <a href="{{ path('sortie_detail', {"id":sortie.id}) }}">+ d'infos</a>
                                         {% if (personne not in sortie.participants) %}
                                             {% dump ('if') %}
 
