--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,14 +8,152 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: poppins;
 }
 
 a{
     color: inherit;
 }
+
+h1{
+    color: #30336b;
+    text-align: center;
+    font-family: poppins;
+    font-size: 3rem;
+    font-weight: 800;
+}
 h3{
     font-size: 2rem;
 }
+
+/*----------------------header--------------------*/
+
+
+header{
+    width: 100%;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #ccc;
+}
+
+.banner{
+    background: #130f40;
+    height: 250px;
+    width: 100%;
+    position: relative;
+}
+
+#logo{
+    font-size: 60px;
+    font-weight: 600;
+    font-family: poppins;
+    color: #fff;
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#avatar_wrapper{
+    width:  100px;
+    height: 100px;
+    position: absolute;
+    right: 10%;
+    top: 40%;
+    background: #fff;
+    border-radius: 50%;
+    transform: translateY(-50%);
+}
+
+#avatar{
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+#avatar:after{
+    content: "Logout";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #000;
+    opacity: 0;
+    color: #fff;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-family: poppins;
+    transition: all .3s ease-in-out;
+}
+
+#avatar:hover:after{
+    opacity: .8;
+}
+
+#avatar a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#avatar img{
+    width: 80%;
+}
+
+#avatar .avatar_pseudo{
+    position: absolute;
+    bottom: -30px;
+    font-family: poppins;
+    color: #fff;
+}
+
+nav{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: poppins;
+}
+
+nav ul{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 20px;
+    width: 150px;
+    height: 50px;
+    background: transparent;
+    color: #30336b;
+    border: 2px solid #30336b;
+}
+
+nav a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 
 
 .container{
@@ -27,35 +165,44 @@ h3{
 }
 
 
-header{
-    background: #616060;
-    height: 150px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    color: #ccc;
-}
 
-nav{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-nav ul{
-    width: 60%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
 
 main{
     flex-grow: 2;
     width: 100%;
-    margin: 50px 20px;
+    margin: 20px 20px;
 }
+/*----------------Formulaire d'identification---------------------*/
+
+#identification_form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 20px;
+}
+
+.identification_form_wrapper{
+    width: 80%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.form-control{
+    margin-right: 20px;
+    background: transparent;
+    font-family: poppins;
+    font-size: 1rem;
+    position: relative;
+    border: none;
+    border-bottom: 2px solid #000;
+    width: 200px;
+    padding-left: 5px;
+}
+
+
 /*----------------Formulaire de recherche---------------------*/
 #recherche_form{
     display: flex;
@@ -67,7 +214,7 @@ main{
 
 button{
     background: transparent;
-    min-width: 200px;
+    width: 200px;
     padding: 15px;
     font-family: poppins;
     font-size: 1rem;
@@ -105,8 +252,27 @@ button:hover::after{
     margin: 30px;
 }
 
+.rechercheInput{
+    width: 60%;
+}
+
+.rechercheInput label{
+    width: 150px;
+}
+
+.rechercheCheckbox{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.rechercheCheckbox input{
+    margin-right: 10px;
+}
+
 .rechercheInput, .rechercheCheckbox{
-    width: 50%;
     padding: 10px 40px;
 }
 
@@ -118,7 +284,6 @@ button:hover::after{
 }
 .rechercheInput label{
     display: inline-block;
-    width: 30%;
     font-size: 1.2rem;
 }
 
@@ -225,7 +390,7 @@ button:hover::after{
     width: 100px;
     height: 30px;
     color: #fff;
-    top: 50px;
+    top: 30px;
     right: -20px;
     z-index: 10;
     display: flex;
@@ -313,4 +478,53 @@ footer{
     background: #616060;
     width: 100%;
     height: 150px;
+}
+
+@media only screen and (max-width: 650px) {
+
+    #logo{
+        font-size: 30px;
+    }
+    /* Attention!!!!!!!!*/
+    nav ul{
+        flex-direction: column;
+        margin-top: 70px;
+    }
+
+    nav li{
+        margin-top: 5px;
+    }
+
+    #avatar_wrapper{
+        width: 60px;
+        height: 60px;
+    }
+    #avatar .avatar_pseudo{
+        width: 120%;
+        bottom: -30px;
+        font-size: 12px;
+    }
+
+    .champsDeRecherche{
+        flex-direction: column;
+    }
+
+    .rechercheInput{
+        width: 100%;
+    }
+
+    .rechercheInput label{
+        font-size: .8rem;
+        width: 30%;
+    }
+
+    .rechercheCheckbox{
+        width: 100%;
+    }
+
+    rechercheInput input, .rechercheInput select{
+        width: 70%;
+    }
+
+
 }
