--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,24 @@
 
         <div class="container">
             <header>
-                <img src="{{ asset('images/logo_ENI_pt.svg') }}" alt="Sortir" height="150 px">
+                <div class="banner">
+                    {% if app.user %}
+                        <a href="{{ path("homepage") }}" id="logo">SORTIR </a>
+                    {% else %}
+                        <a href="{{ path("app_login") }}" id="logo">SORTIR </a>
+                    {% endif %}
+                    {% if app.user %}
+                        <div id="avatar_wrapper">
+                            <a href="{{ path('app_logout') }}">
+                                <div id="avatar">
+                                        <img src="{{ asset('images/avatars/avataaars(6).png') }}" alt="avatar">
+                                        <div class="avatar_pseudo">Bob Marley</div>
+                                </div>
+                            </a>
+                        </div>
+                    {% endif %}
+                </div>
+                <!--<img src="{{ asset('images/sortir.svg') }}" alt="Sortir" height="150 px">-->
                 {% block nav %}
                     {% include 'inc/_nav.html.twig' %}
                 {% endblock %}
