--- a/public/css/style.css
+++ b/public/css/style.css
@@ -313,6 +313,27 @@ button:hover::after{
 #recherche_form_submit{
     text-align: center;
 }
+/* ---------AddCard---------------*/
+
+.addSortie{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#ajoutSortie{
+   background-color: #130f40;
+    color: #fff;
+    width: 10%;
+    height: 50px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 
 /* ---------SortieCard---------------*/
 
