connexion email et pseudo

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,7 +22,7 @@
 
     <div class="identification_form_wrapper">
         <div class="identification_inputs">
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" autocomplete="email" required autofocus>
+            <input type="text" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" autocomplete="email" required autofocus>
             <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" autocomplete="current-password" required>
             <label>
                 <input type="checkbox" name="_remember_me" checked/>
