ajout choix ville

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -73,6 +73,9 @@
                                 <div class="card_organisateur">
                                     Organisé par {{ sortie.organisateur.pseudo }}
                                 </div>
+                                <div class="card_ville">
+                                    À : {{ sortie.lieu.ville.nom }}
+                                </div>
                             </div>
                             <div class="sortieCardBack">
                                 <div class="card_infos_back">
