--- a/templates/sortie/creationSortie.html.twig
+++ b/templates/sortie/creationSortie.html.twig
@@ -27,14 +27,14 @@ Ajout d'une sortie
     <div>
         {{ form_row(sortieForm.duree) }}
     </div>
+    <div>
+        {{ form_row(sortieForm.ville) }}
+    </div>
     <div class="dispoLieuForm">
         {{ form_row(sortieForm.lieu) }} <div id="addPlace"></div>
     </div>
     <div>
         {{ form_row(sortieForm.campus) }}
-    </div>
-    <div>
-        {{ form_row(sortieForm.organisateur) }}
     </div>
 
     {{ form_end(sortieForm) }}
