--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,13 @@ header{
     position: relative;
 }
 
+.date{
+    position: absolute;
+    bottom: 10px;
+    right: 10%;
+    color: #fff;
+}
+
 #logo{
     font-size: 60px;
     font-weight: 600;
@@ -170,7 +177,7 @@ nav a {
 main{
     flex-grow: 2;
     width: 100%;
-    margin: 20px 20px;
+    margin: 20px 60px;
 }
 /*----------------Formulaire d'identification---------------------*/
 
@@ -324,9 +331,9 @@ button:hover::after{
 }
 
 #ajoutSortie{
-   background-color: #130f40;
+    background-color: #130f40;
     color: #fff;
-    width: 10%;
+    width: 200px;
     height: 50px;
     border-radius: 20px;
     display: flex;
@@ -404,6 +411,14 @@ button:hover::after{
 
 .yellow{
     background: #f9ca24;
+}
+
+.lightgrey{
+    background: #989898;
+}
+
+.darkred{
+    background: #850000;
 }
 
 .card_etat{
