--- a/templates/inc/_nav.html.twig
+++ b/templates/inc/_nav.html.twig
@@ -5,7 +5,7 @@
                     <a href="{{ path('homepage') }}">Accueil</a>
                 </li>
                 <li>
-                    <a href="{{ path('show_profile') }}">Mon profil</a>
+                    <a href="{{ path('profile_edit') }}">Mon profil</a>
                 </li>
                 {% if is_granted('ROLE_ADMIN') %}
                     <li>
