--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,8 +23,13 @@
                         <div id="avatar_wrapper">
                             <a href="{{ path('app_logout') }}">
                                 <div id="avatar">
+                                    {% if app.user.image %}
+                                        <img src="{{ app.user.image }}" alt="avatar">
+                                    {% else %}
                                         <img src="{{ asset('images/avatars/avataaars(6).png') }}" alt="avatar">
-                                        <div class="avatar_pseudo">{% block pseudo %}{% endblock %}</div>
+                                    {% endif %}
+
+                                        <div class="avatar_pseudo">{{ app.user.pseudo }}</div>
                                 </div>
                             </a>
                         </div>
