ajout bouton annuler

--- a/templates/sortie/creationSortie.html.twig
+++ b/templates/sortie/creationSortie.html.twig
@@ -38,5 +38,6 @@ Ajout d'une sortie
     </div>
 
     {{ form_end(sortieForm) }}
+    <a href="{{ path('homepage') }}"><button>Annuler</button></a>
 
 {% endblock %}
