--- a/templates/sortie/creationVille.html.twig
+++ b/templates/sortie/creationVille.html.twig
@@ -25,6 +25,7 @@
     {{ form_start(villeForm) }}
         {{ form_widget(villeForm) }}
     {{ form_end(villeForm) }}
+    <a href="{{ path('homepage') }}"><button>Annuler</button></a>
 
 
 
