--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -5,5 +5,6 @@
     {{ form_start(profileForm) }}
     {{ form_widget(profileForm) }}
     {{ form_end(profileForm) }}
+    <a href="{{ path('homepage') }}"><button>Annuler</button></a>
 {% endblock %}
 {% block title %}Mon profil{% endblock %}
