--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,12 +6,12 @@
     <h1>Identification</h1>
 <form id="identification_form" method="post">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">Erreur lors de la saisie des identifiants</div>
     {% endif %}
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes déjà connecté en tant que {{ app.user.userIdentifier }}, <br><a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
     {% endif %}
 
